Correct some sorta-broken stuff.
Calling remove(0) on an ObjectDeque won't remove the item at index 0, it will try to remove an instance of the number 0 (even if that Deque can't hold one). That's been fixed. Some Gradle stuff needed attention. Also, I tried out the framerate + 1 thing in the current Liftoff here, it seems fine but I can't really test the exact situation in question.